--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: avatec
-paypal: https://paypal.me/pools/c/8p6PzJtLZ3
+custom: https://paypal.me/pools/c/8p6PzJtLZ3
